@@ -28,7 +28,7 @@ using System;
 
 namespace Taskmaster.Process
 {
-	public delegate void ProcessingCountDelegate(int delta, int total);
+	public delegate void ProcessingCountDelegate(int total);
 
 	public class ProcessingCountEventArgs : EventArgs
 	{
